syntax = "proto3";

option go_package = "web-grpc-video-chat/src/inroom/stream";

service Stream {
  rpc StreamState(User) returns (stream StateMessage);
  rpc ChangeState(User) returns (Ack);
  rpc AVStream(User) returns (stream AVFrameData);
}

message Ack {}

message StateMessage {
  int64 Time = 1;
  string UUID = 2;
  User Author = 3;
  User Guest = 4;
}

message User {
  bool IsCamEnabled = 1;
  bool IsMuted = 2;
  string UserUUID = 3;
  string UserName = 4;
  string UserRoom = 5;
}

message AVFrameData {
  string UserUUID = 1;
  bytes FrameData = 2;
}